samples/_failures_safe/1761350641_4d2e04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5836696b.c: In function ‘main’:
./samples/SAFE/__tmp_5836696b.c:152:13: error: expected declaration or statement at end of input
  152 |             cols = temp;
      |             ^~~~
./samples/SAFE/__tmp_5836696b.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5836696b.c:152:13: error: expected declaration or statement at end of input
